[package]
name = "packinglist"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A freelist implementation that always places data at the smallest index."
readme = "README.md"
repository = "https://github.com/dsmurrow/packinglist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }
