[package]
name = "packinglist"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A freelist implementation that always places data at the smallest index."
readme = "README.md"
repository = "https://github.com/dsmurrow/packinglist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []
serde-std = ["dep:serde", "serde/default"]
serde-nostd = ["dep:serde"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }
